# cloud-custodian-policy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows_example/: build-deploy.yml
aws/accounts/: my-org-a.yml
aws/deployments/: my-org-a-nonprod.yml
aws/policies/: ebs-snapshot-cleanup-better-notification.yml  ebs-snapshot-cleanup-lite.yml  ebs-snapshot-cleanup.yml
docs/: 01-why-cloud-custodian.md  03-designing-and-testing-ebs-snapshot-cleanup-policy.md  04-globalize-and-localize-policies.md  06-balances-autonomy-and-security.md
docs/ideas/: from-stars-to-constellations.md  reviewing-solutions.md  steampipe-integration.md
docs/journey/: 01-why-cloud-custodian.md  02-streamlining-cloud-custodian.md  03-designing-and-testing-ebs-snapshot-cleanup-policy.md  04-globalize-and-localize-policies.md  05-building-a-standardized-process.md  06-balances-autonomy-and-security.md  07-better-notification.md  08-best-practices-for-efficient-execution.md  09-mailer-and-challenging-questions.md  10-a-practical-deployment-architecture.md  11-cicd-pipeline.md  c7n-deployment.drawio
infra/develop/: main.tf
tests/aws/: aws.py  conftest.py  test_ebs-snapshot-cleanup-lite.py
tools/: kms_encrypt.py
tools/mailer/: cloud-dev.yml
