[tool.poetry]
name = "cloud-custodian-policy"
version = "0.1.0"
description = "Cloud Governance Platform Design"
authors = ["Kent <kentnsw@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cloud_custodian_policy"}]

[tool.poetry.dependencies]
python = "^3.8"
c7n = "^0.9.32"
c7n-org = "^0.6.31"
c7n-mailer = "^0.6.31"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
moto = "^4.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
